# npsystem

./: .dir-locals.el  .gitignore  .gitmodules  CMAKE_GENERATED_FILES_GUIDE.md  CMakeLists.txt  NPRPC_TEST_GUIDE.md  README.md  avr.cmake  build.sh  clean_all.sh  configure.bat  install_all.sh  launch.py  make_all.sh  npsystem.sln
avr_info/: CMakeLists.txt  Makefile  avr_info.vcxproj  avr_info.vcxproj.filters
avr_info/include/avr_info/: avr_info.h
avr_info/src/: avr_info.cpp  m16.cpp  m8.cpp
make_info/: CMakeLists.txt  atmega16.cpp  atmega16v.cpp  atmega8.cpp  atmega8v.cpp  avr.h  make_info.cpp  make_info.vcxproj  make_info.vcxproj.filters  pclink.cpp  pclink_virtual.cpp
make_info/src/: atmega16.cpp  atmega16v.cpp  atmega8.cpp  atmega8v.cpp  make_info.cpp  pclink.cpp  pclink_virtual.cpp
npc/: .gitignore  CMakeLists.txt  Makefile  idl.bat  npc.vcxproj  npc.vcxproj.filters
npc/idl/: db.npidl  db.ts  make.bat  npsystem_constants.npidl  server.npidl  server.ts
npc/include/npc/: db.hpp  db_m.hpp  npsystem_constants.hpp  npsystem_constants_m.hpp  npwebserver.hpp  server.hpp  server_m.hpp  stream.h
npc/src/: db.cpp  npsystem_constants.cpp  npwebserver.cpp  server.cpp
npcompiler/: CMakeLists.txt  Makefile  flex.sh  npcompiler.vcxproj  npcompiler.vcxproj.filters
npcompiler/include/npcompiler/: npcompiler.hpp  resolver.hpp
npcompiler/src/: ast.cpp  ast.hpp  ast_constant_folding.cpp  ast_utils.hpp  builder_llvm.cpp  builder_llvm.hpp  lang.l  lang.y  npcompiler.cpp  number.hpp  typer.cpp  typer.hpp  utils.cpp  utils.hpp
npcompiler/test/: example0.txt  example1.txt
npdatabase/: CMakeLists.txt
npdatabase/examples/: cfbd_control_unit_example.cpp
npdatabase/src/: bfsiterator.hpp  blob_manager.cpp  blob_manager.hpp  bplustree.hpp  btree.hpp  buffer_pool_manager.cpp  buffer_pool_manager.hpp  dbtypes.hpp  disk_manager.cpp  disk_manager.hpp  flexible_value.hpp  lru_replacer.hpp  page.hpp  posix_disk_manager.hpp
npdbclient/: CMakeLists.txt  Makefile  dllmain.cpp  npdbclient.vcxproj  npdbclient.vcxproj.filters
npdbclient/include/: import_export.h
npdbclient/src/: db.cpp  dllmain.cpp
npdbserver/: CMakeLists.txt  Makefile  npdbserver.vcxproj  npdbserver.vcxproj.filters
npdbserver/src/: config.h  npdbserver.cpp
nplib/: CMakeLists.txt  Makefile  nplib.vcxproj  nplib.vcxproj.filters
nplib/src/: beast.cpp  hexparser.cpp  log.cpp  win_service.cpp
nplib/test/: CMakeLists.txt
nprpc/: .gitignore  CMakeLists.txt  Makefile  nprpc.vcxproj  nprpc.vcxproj.filters  test_shared_memory_ref_counter.cpp
nprpc/check/: CMakeLists.txt
nprpc/cmake/: npidl.cmake
nprpc/idl/: make.bat  nprpc_base.npidl  nprpc_nameserver.npidl
nprpc/npidl/: CMakeLists.txt  npidl.vcxproj  npidl.vcxproj.filters
nprpc/npnameserver/: npnameserver.cpp  npnameserver.vcxproj  npnameserver.vcxproj.filters
nprpc/nprpc_js/: .gitignore  CMakeLists.txt  fix-declaration-paths.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
nprpc/nprpc_test/: nprpc_test.cpp  nprpc_test.vcxproj  nprpc_test.vcxproj.filters
nprpc/nprpcst/: nprpc_base.cpp  nprpcst.vcxproj  nprpcst.vcxproj.filters
nprpc/src/: asio.h  async_connect.cpp  client_socket_connection.cpp  client_websocket_connection.cpp  framework.h  helper.cpp  helper.hpp  http_server.cpp  nprpc.cpp  rpc_impl.cpp  server_session_socket.cpp  server_session_websocket.cpp  session.cpp  session.h  session_context.cpp  shared_memory_channel.cpp  shared_memory_connection.cpp  shared_memory_ref_counter.cpp  shared_memory_registry.cpp  uuid.cpp  websocket_session.cpp
nprpc/test/: CMakeLists.txt
nprpc/web/: .npmignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
nprpc/win/: dllmain.cpp
npserver/: CMakeLists.txt  Makefile  corba_test.vcxproj.filters  npserver.vcxproj  npserver.vcxproj.filters
npserver/src/: avr_virtual.cpp  avr_virtual.h  boost_export.cpp  bridge.h  bridge_avr_virtual.cpp  bridge_avr_virtual.h  bridge_udp.cpp  bridge_udp.h  config.h  environment.cpp  environment.h  frame.cpp  frame.h  history.cpp  history.h  itemmgr.cpp  itemmgr.h  listener.cpp  listener.h  main.cpp  npsys.cpp  protocol.cpp  protocol.h  protocol_avr5.h  protocol_base.h  protocol_read.h  protocol_task.h  protocol_write.h  regstatus.h  server.h  stdafx.cpp  stdafx.h  thread_pool.h
npsys/: CMakeLists.txt  Makefile  npsys.vcxproj  npsys.vcxproj.filters
npsys/src/: alg.cpp  corba.cpp  npsys.cpp  online_value.cpp  system.cpp
npsystem/: CMakeLists.txt  Ribbon.bml  Ribbon.h  Ribbon.rc  Ribbon.xml  ScintillaView.cpp  ScintillaView.h  algext.cpp  algext.h  assigned.cpp  assignedalgorithm.h  avrassigned.cpp  avrassigned.h  avrcommand.cpp  avrcommand.h  avrconfigurator.cpp  avrconfigurator.h  avrcontroller.cpp  block.cpp  block.h  block_factory.hpp  blockcomposition.cpp  blockcomposition.h  blockcomposition.hpp  blockdecl.h  blockpropertyid.h  boost_export.cpp  codegenerator.h  codegenerator_avr.cpp  codegenerator_avr.h  color.h  comassert.h  command.cpp  command.h  command_i.hpp  command_impl.h  config.h  configurator.cpp  configurator.h  constants.h  (+149 more)
npsystem/old/: fileitemview.cpp  fileitemview.h  lib.cpp  lib.h  module_old.cpp  module_old.h  serialization_olevariant.h  server_variant.h  thread_safe_set.h  timercounter.h  tr_library.cpp
npwebserver/: CMakeLists.txt  Makefile  npwebserver.vcxproj  npwebserver.vcxproj.filters
npwebserver/idl/: make.bat  npwebserver.npidl
npwebserver/src/: boost_export.cpp  config.h  main.cpp  npsys.cpp  npwebserver.cpp  npwebserver.hpp  npwebserver_m.hpp
npwebserver/web/: rollup.config.js  tsconfig.json
sim/: CMakeLists.txt  Makefile  sim.vcxproj  sim.vcxproj.filters
sim/src/: atmega16.h  atmega16_def.h  atmega8.h  atmega8_def.h  avrmc.h  boost_export.cpp  common.h  cpu.cpp  cpu.h  event_list.h  hexparser.cpp  hexparserflash.h  intrisics.h  main.cpp  mctypes.h  medium.cpp  opcodes.h  peripheral.h  peripheral_atmega16.h  peripheral_atmega8.h  peripheral_uart.h  stdafx.cpp  stdafx.h  targetver.h  vm.cpp  vm.h
sim/test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: test_compiler.cc
(+468 files in other folders)
